tai cau truc file anh

--- a/mswebhome.html
+++ b/mswebhome.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-inverse mycustomclass" id="menu">
     <div class="container">
         <div class="navbar-header">
-            <a href="#" class="navbar-left"> <img src="logo.png" height="50" width="50"/></a>
+            <a href="#" class="navbar-left"> <img src="images/logo.png" height="50" width="50"/></a>
             <a class="navbar-brand" href="#">MICROSOFT</a>
         </div>
         <ul class="nav navbar-nav">
