--- a/webMS.html
+++ b/webMS.html
@@ -17,7 +17,7 @@
         <div class="navbar-header">
             <a class="navbar-brand" href="#"
                style="font-weight: bold; font-family: 'Segoe UI', SegoeUI, Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 15px;"><img
-                    src="logo.png" height="25" width="25" style="float: left;">
+                    src="images/logo.png" height="25" width="25" style="float: left;">
                 &nbsp;Microsoft</a>
         </div>
 
@@ -121,11 +121,11 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="slide1.png" style="height:430.39px; width: 1200px;" alt="slide1">
+                <img src="images/slide1.png" style="height:430.39px; width: 1200px;" alt="slide1">
             </div>
 
             <div class="item">
-                <img src="slide2.jpg" style="height:430.39px; width: 1200px;" alt="slide2">
+                <img src="images/slide2.jpg" style="height:430.39px; width: 1200px;" alt="slide2">
             </div>
         </div>
         <!-- Left and right controls -->
@@ -147,7 +147,7 @@
             Cho công việc</div>
         <div class="col-sm-3">
             <ul class="list-unstyled">
-                <li><a href="#"> <img src="msStore.png"></a></li>
+                <li><a href="#"> <img src="images/msStore.png"></a></li>
                 <li style="font-weight: bold;"><a href="#"> Microsoft
                     store </a></li>
                 <li><a href="#"> Tìm mọi thứ bạn cần cho gia đình, trường
@@ -157,7 +157,7 @@
         </div>
         <div class="col-sm-3">
             <ul class="list-unstyled">
-                <li><a href="#"> <img src="outlook.png"></a></li>
+                <li><a href="#"> <img src="images/outlook.png"></a></li>
                 <li style="font-weight: bold;"><a href="#"> Outlook </a></li>
                 <li><a href="#"> Ứng dụng email miễn phí cho iOS, Android
                     và Windows. </a></li>
@@ -175,7 +175,7 @@
         </div>
         <div class="col-sm-3">
             <ul class="list-unstyled">
-                <li><a href="#"> <img src="sway.png"></a></li>
+                <li><a href="#"> <img src="images/sway.png"></a></li>
                 <li style="font-weight: bold;"><a href="#"> Sway </a></li>
                 <li><a href="#"> Dễ dàng biến ý tưởng của bạn thành hiện
                     thực trên web.</a></li>
@@ -195,7 +195,7 @@
     <div class="border row">
         <div class="col-sm-3">
             <ul class="list-unstyled">
-                <li><a href="#"> <img src="office365doanhnghiep.png"></a></li>
+                <li><a href="#"> <img src="images/office365doanhnghiep.png"></a></li>
                 <li style="font-weight:bold;"><a href="#"> Office 365 cho Doanh nghiệp </a></li>
                 <li><a href="#"> Truy cập vào tệp tin từ mọi nơi, dù trực tuyến hay ngoại tuyến.</a></li>
                 <li><a href="#"> TÌM HIỂU THÊM VỀ OFFICE 365 </a></li>
@@ -203,7 +203,7 @@
         </div>
         <div class="col-sm-3">
             <ul class="list-unstyled">
-                <li><a href="#"> <img src="w10.png"></a></li>
+                <li><a href="#"> <img src="images/w10.png"></a></li>
                 <li style="font-weight:bold;"><a href="#"> Windows 10 Enterprise </a></li>
                 <li><a href="#"> Truy cập vào tệp tin từ mọi nơi, dù trực tuyến hay ngoại tuyến.</a></li>
                 <li><a href="#"> TẢI XUỐNG NGAY</a></li>
@@ -211,7 +211,7 @@
         </div>
         <div class="col-sm-3">
             <ul class="list-unstyled">
-                <li><a href="#"> <img src="vs17.png"></a></li>
+                <li><a href="#"> <img src="images/vs17.png"></a></li>
                 <li style="font-weight:bold;"><a href="#"> Visual Studio 2017 </a></li>
                 <li><a href="#"> Năng suất cho mọi nhà phát triển, mọi ứng dụng và mọi nền tảng.</a></li>
                 <li><a href="#"> TẢI XUỐNG VISUAL STUDIO 2017</a></li>
@@ -219,7 +219,7 @@
         </div>
         <div class="col-sm-3">
             <ul class="list-unstyled">
-                <li><a href="#"> <img src="msCRM.png"></a></li>
+                <li><a href="#"> <img src="images/msCRM.png"></a></li>
                 <li style="font-weight:bold;"><a href="#"> Microsoft Dynamics CRM </a></li>
                 <li><a href="#"> Trải nghiệm các tính năng mới hiện có.</a></li>
                 <li><a href="#"> DÙNG THỬ DYNAMICS CRM</a></li>
@@ -229,7 +229,7 @@
     <!-- Link to Facebook-->
     <p style="margin-left:10px;"> Dõi theo trên Microsoft
         <a href="https://www.facebook.com/Microsoft/?brand_redir=281246808612055">
-            <img border ="0" alt= "facebook link" src="fb.png" height="20" width="20">
+            <img border ="0" alt= "facebook link" src="images/fb.png" height="20" width="20">
         </a>
     </p>
 </div>
@@ -297,7 +297,7 @@
         </div>
 
         <div class="row">
-            <a href="#"> <img src="earth.png" height="15" width="15">Tiếng
+            <a href="#"> <img src="images/earth.png" height="15" width="15">Tiếng
                 Việt (Việt Nam)
             </a>
 
