--- a/webMS.html
+++ b/webMS.html
@@ -166,7 +166,7 @@
         </div>
         <div class="col-sm-3">
             <ul class="list-unstyled">
-                <li><a href="#"> <img src="onenote.png"></a></li>
+                <li><a href="#"> <img src="images/onenote.png"></a></li>
                 <li style="font-weight: bold;"><a href="#"> OneNote </a></li>
                 <li><a href="#"> Sắp xếp khoa học các ghi chú và cuộc sống
                     của bạn.</a></li>
